// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvoconVSnackbar > renders correctly if type is error 1`] = `
<v-snackbar-stub
  absolute="false"
  activatorprops="[object Object]"
  attach="false"
  class="pt-0"
  closeonback="true"
  closeoncontentclick="false"
  contained="false"
  contentclass="pa-0 rounded bg-snackbar-red"
  disabled="false"
  eager="false"
  loading="false"
  location="top right"
  locationstrategy="static"
  maxwidth="500px"
  modelvalue="false"
  offset="50px"
  openonhover="false"
  origin="auto"
  reversetimer="false"
  theme="light"
  tile="false"
  timeout="5000"
  timer="false"
  transition="v-snackbar-transition"
  variant="elevated"
  vertical="false"
  zindex="2000"
>
  <div
    class="fill-height px-4 py-3 d-flex flex-row flex-nowrap align-center"
  >
    <v-icon-stub
      class="mr-2"
      color="error"
      disabled="false"
      end="false"
      size="default"
      start="false"
      tag="i"
    >
      M13,13H11V7H13M13,17H11V15H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
    </v-icon-stub>
    <span>
      <div
        class="text-body-large font-weight-medium"
      >
        Error message
      </div>
      <span
        class="text-body-medium"
      >
        Error description
      </span>
    </span>
  </div>
</v-snackbar-stub>
`;

exports[`EvoconVSnackbar > renders correctly if type is not given 1`] = `
<v-snackbar-stub
  absolute="false"
  activatorprops="[object Object]"
  attach="false"
  class="pt-0"
  closeonback="true"
  closeoncontentclick="false"
  contained="false"
  contentclass="pa-0 rounded bg-white"
  disabled="false"
  eager="false"
  loading="false"
  location="top right"
  locationstrategy="static"
  maxwidth="500px"
  modelvalue="false"
  offset="50px"
  openonhover="false"
  origin="auto"
  reversetimer="false"
  theme="light"
  tile="false"
  timeout="5000"
  timer="false"
  transition="v-snackbar-transition"
  variant="elevated"
  vertical="false"
  zindex="2000"
>
  <div
    class="fill-height px-4 py-3 d-flex flex-row flex-nowrap align-center"
  >
    <!--v-if-->
    <span>
      <div
        class="text-body-large font-weight-medium"
      >
        Message
      </div>
      <!--v-if-->
    </span>
  </div>
</v-snackbar-stub>
`;

exports[`EvoconVSnackbar > renders correctly if type is success 1`] = `
<v-snackbar-stub
  absolute="false"
  activatorprops="[object Object]"
  attach="false"
  class="pt-0"
  closeonback="true"
  closeoncontentclick="false"
  contained="false"
  contentclass="pa-0 rounded bg-white"
  disabled="false"
  eager="false"
  loading="false"
  location="top right"
  locationstrategy="static"
  maxwidth="500px"
  modelvalue="false"
  offset="50px"
  openonhover="false"
  origin="auto"
  reversetimer="false"
  theme="light"
  tile="false"
  timeout="5000"
  timer="false"
  transition="v-snackbar-transition"
  variant="elevated"
  vertical="false"
  zindex="2000"
>
  <div
    class="fill-height px-4 py-3 d-flex flex-row flex-nowrap align-center"
  >
    <v-icon-stub
      class="mr-2"
      color="primary"
      disabled="false"
      end="false"
      size="default"
      start="false"
      tag="i"
    >
      M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z
    </v-icon-stub>
    <span>
      <div
        class="text-body-large font-weight-medium"
      >
        Success message
      </div>
      <span
        class="text-body-medium"
      >
        Success description
      </span>
    </span>
  </div>
</v-snackbar-stub>
`;

exports[`EvoconVSnackbar > renders correctly if type is warning 1`] = `
<v-snackbar-stub
  absolute="false"
  activatorprops="[object Object]"
  attach="false"
  class="pt-0"
  closeonback="true"
  closeoncontentclick="false"
  contained="false"
  contentclass="pa-0 rounded bg-snackbar-yellow"
  disabled="false"
  eager="false"
  loading="false"
  location="top right"
  locationstrategy="static"
  maxwidth="500px"
  modelvalue="false"
  offset="50px"
  openonhover="false"
  origin="auto"
  reversetimer="false"
  theme="light"
  tile="false"
  timeout="5000"
  timer="false"
  transition="v-snackbar-transition"
  variant="elevated"
  vertical="false"
  zindex="2000"
>
  <div
    class="fill-height px-4 py-3 d-flex flex-row flex-nowrap align-center"
  >
    <v-icon-stub
      class="mr-2"
      color="lw-commented-yellow"
      disabled="false"
      end="false"
      size="default"
      start="false"
      tag="i"
    >
      M13 14H11V9H13M13 18H11V16H13M1 21H23L12 2L1 21Z
    </v-icon-stub>
    <span>
      <div
        class="text-body-large font-weight-medium"
      >
        Warning message
      </div>
      <span
        class="text-body-medium"
      >
        Warning description
      </span>
    </span>
  </div>
</v-snackbar-stub>
`;
